Fixed several bugs regarding the API URL